(tests
 (names
  test_bounds
  test_camera
  test_canvas
  test_colour
  test_cone
  test_cube
  test_cylinder
  test_group
  test_intersection
  test_light
  test_matrix
  test_material
  test_patterns
  test_plane
  test_precomputed
  test_ray
  test_sphere
  test_transformation
  test_triangle
  test_tuple
  test_world)
 (libraries raybook ounit2))
